# evalkit

./: .gitignore  LICENSE  README.md  evalkit.db  pyproject.toml  report.html  results.json
.github/workflows/: evalkit.yml
evalkit/: __init__.py  cli.py  compare.py  git_utils.py  history.py  json_report.py  reporting.py  results.py  runner.py  schema.py  store.py  trend.py
evalkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
evalkit/evaluators/: __init__.py  base.py  contains.py  exact_match.py  llm_judge.py  regex.py
evalkit/providers/: __init__.py  base.py  mock.py  openai_provider.py  openrouter_provider.py
examples/: basic_eval.yaml  failing.eval.yaml  openai.eval.yaml  openrouter.eval.yaml  summarisation.eval.yaml
tests/: test_evaluators.py  test_llm_judge.py  test_runner.py  test_schema.py  test_summary.py
