[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "evalkit"
version = "0.1.0"
description = "LLM evaluation framework"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "typer",
    "pydantic",
    "pyyaml",
    "sqlmodel",
    "openai",
    "rich",
]

[project.scripts]
evalkit = "evalkit.cli:app"

[tool.setuptools.packages.find]
include = ["evalkit*"]